# twins-chart-analysis

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.claude/: settings.json
.claude/skills/: python-aws-inspector.skill  steering-generator.skill
.claude/skills/python-aws-inspector/: SKILL.md
.claude/skills/python-aws-inspector/references/: aws-infra.md  code-quality.md  performance.md  security.md
.claude/skills/python-aws-inspector/scripts/: scan_codebase.py
.claude/skills/steering-generator/: SKILL.md
.claude/skills/steering-generator/references/: steering-format.md
.claude/skills/steering-generator/scripts/: scan_codebase.py
.kiro/specs/excel-file-registration/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/trolley-wear-eda/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
plan/: eda-plan.md
src/: anomaly_detector.py  data_loader.py  noise_filter.py  parameter_validator.py  signal_analyzer.py  visualizer.py
tests/: test_anomaly_detector.py  test_app.py  test_data_loader.py  test_excel_file_registration.py  test_excel_file_registration_task1.py  test_excel_file_registration_task3.py  test_excel_file_registration_task4.py  test_noise_filter.py  test_parameter_validator.py  test_setup.py  test_signal_analyzer.py  test_task9.py  test_visualizer.py
