[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trolley-wear-eda"
version = "0.1.0"
description = "トロリ線摩耗検測データ（5cmピッチ生データ）探索的データ分析（EDA）ツール"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "plotly>=5.0.0",
    "streamlit>=1.28.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
